get posts for 2 servers

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,6 @@
 		%sveltekit.head%
 	</head>
 	<body>
-		<div style="background-color: aqua">%sveltekit.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
