--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+<!--		<link rel="icon" href="%sveltekit.assets%/favicon.png" />-->
 		<meta name="viewport" content="width=device-width" />
+		<title>Boop</title>
 		%sveltekit.head%
 	</head>
-	<body>
+	<body data-sveltekit-prefetch>
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
