--- a/src/app.html
+++ b/src/app.html
@@ -2,10 +2,53 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-<!--		<link rel="icon" href="%sveltekit.assets%/favicon.png" />-->
 		<meta name="viewport" content="width=device-width" />
-		<title>Boop</title>
+
+		<meta property="og:title" content="toot ninja: 🎺🥷" />
+		<meta
+			property="og:description"
+			content="what is unseen may still be known, and other silly thoughts."
+		/>
+		<meta property="og:image" content="https://toot.ninja/LookingRight.jpg" />
+		<meta property="og:url" content="https://toot.ninja" />
+
+		<title>Toot🎺 Ninja🥷. Don't see me.</title>
+
+
+		<style>
+        @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;800&display=swap');
+
+        .center {
+            margin: auto;
+            width: 50%;
+            /*border: 3px solid green;*/
+            padding: 10px;
+        }
+        .center-text {
+            text-align: center;
+            /*border: 3px solid blue;*/
+        }
+
+        body,
+        html {
+            margin: 0;
+            font-size: 100%;
+            font-family: 'Manrope', sans-serif;
+            color: #261607;
+        }
+
+        body {
+            background-color: #d7d2cb;
+            /*-webkit-font-smoothing: antialiased;*/
+            /*-moz-osx-font-smoothing: grayscale;*/
+            /*scrollbar-width: none;*/
+        }
+		</style>
+
+<!--	Before sveltekit head	-->
 		%sveltekit.head%
+<!--	after 	-->
+
 	</head>
 	<body data-sveltekit-prefetch>
 		<div>%sveltekit.body%</div>
